--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <script src="./js/task-1.js" defer></script>
-    <script src="./js/task-2.js" defer></script>
-    <script src="./js/task-3.js" defer></script>
-    <script src="./js/task-4.js" defer></script>
-  </body>
+  <script src="./js/task-1.js" type="module"></script>
+  <script src="./js/task-2.js" type="module"></script>
+  <script src="./js/task-3.js" type="module"></script>
+  <script src="./js/task-4.js" type="module"></script>
+  <body></body>
 </html>
